k8s/manifests/signaling.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nochat-signaling
  namespace: nochat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nochat-signaling
  template:
    metadata:
      labels:
        app: nochat-signaling
    spec:
      containers:
      - name: signaling
        image: 500532294210.dkr.ecr.us-east-1.amazonaws.com/nochat-signaling:0.0.1
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: nochat-signaling
  namespace: nochat
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: nochat-signaling
